--- a/src/components/Cabecalho/Cabecalho.css
+++ b/src/components/Cabecalho/Cabecalho.css
@@ -9,20 +9,22 @@
     background-color: #FBF8F4;
     position: fixed;
     box-shadow: 0px 4px 4px 0px #00000040;
+    position: fixed;
 }
 .cabecalhonav{
     width: 100vw;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
     background-color: #FBF8F4;
-    gap: 35px;
+    
 }
 .imgcab{
-    margin-left: 30px;
+    position: relative;
+    left: 0;
     height: 10vh;
-    width: 5vw;
+    width: 10vh;
 }
 .menu-toggle {
     display: none; 
@@ -35,9 +37,13 @@
 }
 
 .menu {
+    width: 100%;
     display: flex;
     flex-direction: row;
-    gap: 35px;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #FBF8F4;
+    
 }
 .refcab{
     font-family: Montserrat;
@@ -47,6 +53,9 @@
     text-decoration: none;
     margin-right: 10px;
     margin-left: 10px;
+}
+.refcab:hover{
+    text-decoration:underline ;
 }
 .refcab-traco {
     font-size: 32px;
@@ -73,9 +82,46 @@
     font-weight: 900;
     color: black;
 }
-@media(max-width: 425px){
+@media(min-width: 2000px){
+    .refcab{
+        font-size: 40px;
+    }
+    .refcab-traco {
+        font-size: 40px;
+    }
+    .inputcab{
+        width: 300px;
+        height: 50px;
+    }
+}
+@media(max-width: 1240px){
+    .refcab{
+        font-size: 24px;
+    }
+    .refcab-traco {
+        font-size: 24px;
+    }
+    .inputcab{
+        width: 150px;
+        height: 28px;
+    }
+}
+
+@media(max-width: 1024px){
+    .refcab{
+        font-size: 18px;
+    }
+    .refcab-traco {
+        font-size: 18px;
+    }
+    .inputcab{
+        width: 100px;
+        height: 24px;
+    }
+}
+@media(max-width: 768px){
     .cabecalhogeral{
-        width: 425px;
+        width: 100%;
         height: 10%;
         display: flex;
         flex-direction: row;
@@ -87,24 +133,22 @@
         gap: 150px;
     }
     .cabecalhonav{
-        width: 100vw;
+        width: 100%;
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
         align-items: center;
         background-color: #FBF8F4;
-        gap: 35px;
+        gap: 60%;
     }
     .imgcab{
         position: relative;
-        right: 60px;
         height: 87px;
         width: 87px;
         margin: 0;
     }
     .menu-toggle {
         position: relative;
-        left: 60px;
         display: block;
     }
     .menu-toggle.active {
@@ -113,8 +157,8 @@
         border: none;
         cursor: pointer;
         position: absolute;
-        top: 0px;
-        right: -290px;
+        top: 10px;
+        right: 10px;
         z-index: 1100;
         font-family: Montserrat;
         font-weight: 100;
@@ -135,7 +179,7 @@
     }
 
     .menu.active {
-        width: 425px;
+        width: 100%;
         height: auto;
         display: flex; 
         flex-direction: column;
@@ -156,6 +200,9 @@
         font-weight: 300;
         color: #FFFFFF;
     }
+    .refcab:hover{
+        text-decoration:underline ;
+    }
     .refcab-traco {
         display: none;
     }
@@ -166,4 +213,6 @@
         background-color: #FFFFFF;
     }
 }
+
+
   
