--- a/src/components/rodape/rodape.css
+++ b/src/components/rodape/rodape.css
@@ -10,7 +10,7 @@
 }
 .rodapecima{
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
     flex-direction: row;
     align-items: center;
     width: 100vw;
@@ -19,8 +19,8 @@
     left: 0;
 }
 .imgrodape{
-    height: 12vh;
-    width: 6vw;
+    height: 10vh;
+    width: 10vh;
 }
 .rodapeescrito{
     display: flex;
@@ -37,7 +37,7 @@
     margin-left: -3%;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     gap: 10px;
 }
@@ -129,12 +129,40 @@
     text-align: left;
     color: #4B626C  ;   
 }
-@media (max-width: 425px) {
+@media (min-width: 2000px) {
+    .titlestartrodape{
+        font-size: 40px;
+    }
+    .textstartrodape{
+        font-size: 30px;
+    }
+    .textmidrodape{
+        font-size: 40px;
+    }
+    .refrodape{
+        font-size: 30px;
+    }
+    .titleendrodape{
+        font-size: 30px;
+    }
+    .textendrodape{
+        font-size: 20px;
+    }
+    .textinfrodape{
+        font-size: 30px;
+    }
+}
+@media (max-width: 768px) {
+    .midrodape{
+        display: none;
+    }
+}
+@media (max-width: 580px) {
     .geralrodape{
         display: flex;
         justify-content: space-between;
         flex-direction: column;
-        width: 425px;
+        width: 100%;
         height: 205px;
         
     }
@@ -159,5 +187,8 @@
     }
     .titleendrodape{
         display: none;
+    }
+    .rodapeescrito{
+        gap: 10px;
     }
 }
