--- a/src/pages/TelaRegistro/TelaRegistro.css
+++ b/src/pages/TelaRegistro/TelaRegistro.css
@@ -5,27 +5,25 @@
     display: flex;
     flex-direction: row;
     overflow: hidden;
-    position: fixed;
+    
 }
 .esquerdareg{
     margin-left: 50px;
     display: flex;
     flex-direction: column;
-    width: auto;
-    height: auto;
+    width: 30%;
+    height: 100%;
     justify-content: flex-start;
     align-items: center;
 }
 .reg{
-    flex-grow: 1;
     display: flex;
     flex-direction: column;
-    width: 30vw;
-    height: 50vh;
     justify-content: flex-start;
     align-items: center;
     position: relative;
     z-index: 2;
+    height: auto;
 }
 .tituloreg{
     display: flex;
@@ -40,18 +38,19 @@
     
 }
 .registrar{
-    height: 100vh;
-    width: 30vw;
+    height: 50%;
+    width: 30%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    gap: 20px;
     
 }
 .inputrereg{
     margin-bottom: 10%;
     border-radius: 5px;
-    height: 35px;
+    height: 80px;
     width: 300px;
     border: 0;
     box-shadow: 0px 4px 20px 0px #00000040;
@@ -61,7 +60,6 @@
     text-align: left;
 }
 .botaoreg{
-    margin-left: 45%;
     display: flex;
     width: 42px;
     height: 30px;
@@ -69,17 +67,20 @@
     border: 0;
     background-color: #FBF8F4;
     cursor: pointer;
+    position: relative;
+    z-index: 2;
+    left: 130px;
 }
 .reglinks{
     display: flex;
-    justify-content: flex-start;
-    margin-bottom: 5vh;
+    flex-direction: column;
+    justify-content: flex-end;
     font-family: "Montserrat";
-    text-align: start;
-    margin-left: -35%;
-    margin-bottom: 30%;
+    text-align: end;
     position: relative;
+    height: auto;
     z-index: 2;
+    right: 20%;
 }
 .refreg{
     text-decoration: none;
@@ -89,41 +90,54 @@
     text-align: left;
     font-size: 16px;
 }
+@media (min-width: 1921px) {
+    .geralreg{
+        width: 100%;
+        height: 100%;
+    }
+    .esquerdareg{
+        position: relative;
+        margin-left: 50px;
+        width: 30vw;
+        height: 100vh;
+    }
+    .tituloreg{
+        font-size: 100px;
+    }
+    .inputrereg{
+        width: 400px;
+        height: 80px;
+    }
+    .botaoreg{
+        left: 180px;
+    }
+    .refreg{
+        font-size: 24px;
+    }
+    
+}
 @media (max-width: 768px) {
     .geralreg{
         width: 100%;
         height: 100%;
-        display: flex;
         flex-direction: column-reverse;
-        justify-content: center;
-        position: static;
         overflow-y: scroll;
         overflow-x: hidden;
     }
     .esquerdareg{
-        margin-top: 620px;
+        position: relative;
         margin-left: 0px;
-        display: flex;
-        flex-direction: column;
+        margin-top: 65%;
         width: 100%;
-        height: auto;
-        justify-content: flex-start;
-        align-items: center;
-    }
-    .reg{
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
+        height: 100%;
     }
     .tituloreg{
-        font-family: Montserrat;
         font-size: 32px;
-        font-weight: 400;
     }
     .registrar{
        width: 100%;
        height: auto;
+       
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
@@ -132,125 +146,35 @@
         width: 338px;
         height: 32px;
     }
-    .botaoreg{
-        width: 42px;
-        display: flex;
-        align-items: end;
-        margin-left: 350%;
-    }
     .reglinks{
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        font-family: "Montserrat";
-        text-align: start;
-        width: 100%;
-        height: auto;
-        margin: 0px 0px 30px 85px;
+      margin-top: 30px;
+      margin-bottom: 40px;
+      
     }
+    
+    
 
 }
 @media (max-width: 425px) {
-    .geralreg{
-        width: 425px;
-        height: autos;
-        display: flex;
-        flex-direction: column-reverse;
-        justify-content: center;
-        position: static;
-        overflow-y: scroll;
-        overflow-x: hidden;
-    }
+   
     .esquerdareg{
-        margin-top: 400px;
-        margin-left: 0px;
-        width: 425px;
-        height: 600px;
-    }
-    .reg{
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-    }
-    .tituloreg{
-        font-family: Montserrat;
-        font-size: 32px;
-        font-weight: 400;
-        
-    }
-    .registrar{
-        width: 425px;
-       height: auto;
-       display: flex;
-       flex-direction: column;
-       justify-content: flex-start;
-    }
-    .inputrereg{
-        width: 338px;
-        height: 32px;
-        border-radius: 5px 0px 0px 0px;
-    }
-    .botaoreg{
-        width: 42px;
-        display: flex;
-        align-items: end;
-        margin-left: 350%;
+        margin-top: 80%;
     }
     .reglinks{
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        font-family: "Montserrat";
-        text-align: start;
-        width: 425px;
-        height: auto;
-        margin: 0px 0px 30px 85px;
+        right: 90px;
     }
+   
+    
     
 }
 @media (max-width: 375px) {
-    .geralreg{
-        width: 375px;
-        height: auto;
-        position: static;
-        overflow-y: scroll;
-        overflow-x: hidden;
-    }
-    .esquerdareg{
-        margin-top: 330px;
-        margin-left: 0;
-        width: 375px;
-        height: 900;
-    }
-}
-@media (max-width: 320px) {
-    .geralreg{
-        width: 320px;
-        justify-content: center;
-        height: auto;
-        position: static;
-        overflow-y: scroll;
-        overflow-x: hidden;
-    }
-    .esquerdareg{
-        margin-top: 280px;
-        margin-left: 0;
-        width: 320px;
-        height:  auto;
-    }
-    .reglinks{
-        top: 30px;
-        left:65px;
-    }
+   .inputrereg{
+       width: 250px;
+   }
     .botaoreg{
-        width: 42px;
-        display: flex;
-        align-items: end;
-        margin-left: 200% !important;
-    }
-    .inputrereg{
-        width: 200px;
-        margin-bottom: 30px;
-    }
+       left: 110px;
+   } 
+   .reglinks{ 
+    right: 50px;
+   }
 }
