--- a/src/pages/TelaPopulares/TelaPopulares.css
+++ b/src/pages/TelaPopulares/TelaPopulares.css
@@ -14,8 +14,9 @@
     margin-top: 10vh;
     display: flex;
     flex-direction: row;
-    margin-left: 25vh;
-    margin-bottom: 5vh;
+    position: relative;
+    z-index: 2;
+    left: 10%;
 }
 
 .titlepopulares{
@@ -27,23 +28,27 @@
     
 }
 .midpopulares{
-    width: 70vw;
-    height: 140vh;
+    width: 100%;
+    
     display: flex;
     flex-direction: column;
-    margin-left: 15vw;
-    margin-bottom: 20vh;
+    align-items: center;
+    margin-bottom: 10vh;
 }
 .firstmidpop{
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     margin-bottom: 10vh;
 }
 .imagempopulares{
     position: relative;
     z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
 .iconimgpop{
     position: absolute;
@@ -65,14 +70,13 @@
     text-align: center;
     color: #FBF6F0;
 }
-.imgpopulares{
-    width: 479px;
-    height: 270.84px;
-}
+
 .textpopulares{
     display: flex;
+    width: 40%;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
 }
 .titletextpopulares{
     height: 40px;
@@ -83,8 +87,8 @@
     color: #4B626C;
 }
 .ppopulares{
-    height: 230px;
-    width: 663px;
+    height: 10%;
+    
     font-family: Montserrat;
     font-size: 20px;
     font-weight: 300;
@@ -131,20 +135,70 @@
     width: 45px;
     color: #FFFFFF;
 }
-
-@media (max-width: 425px) {
-    .popularesgeral{
-        width: 425px;
-        height: auto;
+@media (min-width: 2000px) {
+    .titlepopulares{
+        font-size: 46px;
     }
-    .titulogeralpop{
-        margin-left: 20px;
+    .titletextpopulares{
+        font-size: 34px;
+        
+    }
+    .ppopulares{
+        font-size: 25px;
+        
+    }
+}
+@media (max-width:1024px) {
+    .titlepopulares{
+        font-size: 28px;
+    }
+    .firstmidpop{
+        justify-content: space-evenly;
+    }
+    .iconimgpop{
+        width: 35px;
+        height: 35px;
+        top: -20px;
+        left: 50px;
+    }
+    .titletextpopulares{
+        font-size: 18px;
+    }
+    .textpopulares{
+        width: 30%;
+    }
+    .ppopulares{
+        font-size: 14px;
+    }
+    .imgpopulares{
+        width: 70%;
+        height: 20%;
+    }
+    
+    .carrinhopop{
+        
+        height: 60px;
+        width: 60px;
+       
+    }
+    .imgcarrinhopop{
+        height: 35px;
+        width: 35px;
+        
+    }
+}
+@media (max-width: 768px) {
+    .popularesgeral{
+        width: 100%;
+        height: 100%;
     }
     .titlepopulares{
         font-size: 24px;
+        margin-bottom: 10%;
     }
     .midpopulares{
-        height: 1300px;
+        
+        margin-bottom: 10%;
     }
     .firstmidpop{
         flex-direction: column;
@@ -152,13 +206,18 @@
     .iconimgpop{
         width: 38px;
         height: 38px;
+        top: -20px;
+        left: 30px;
     }
     .icontextpop{
         font-size: 20px;
     }
     .imgpopulares{
-        width: 322px;
-        height: 190px;
+        width: 80%;
+        height: 20%;
+    }
+    .textpopulares{
+        width: 90%;
     }
     .titletextpopulares{
         font-size: 16px;
@@ -167,8 +226,8 @@
     }
     .ppopulares{
         font-size: 14px;
-        width: 395px;
-        height: 136px;
+        width: 90%;
+        
     }
     .secondmidpop{
         flex-direction: column;
@@ -193,3 +252,17 @@
     }
     
 }
+@media (max-width: 425px) {
+    
+    .titletextpopulares{
+        font-size: 14px;
+    }
+    .iconimgpop{
+        top: -10px;
+       
+        width: 32px;
+        height: 32px;
+    }
+    
+}
+    
