--- a/src/pages/TelaConta/Telaconta.css
+++ b/src/pages/TelaConta/Telaconta.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 .geralconta{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
@@ -109,7 +109,7 @@
 .direitaconta{
     background-color: #4B626C;
     width: 40vw;
-    height: auto;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -128,6 +128,9 @@
     display: grid;
     gap: 100px;
     justify-content: center;  
+    position: relative;
+    z-index: 1;
+
 }
 .grid1conta{
     grid-column-start: 1;
@@ -137,6 +140,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     text-align: center;
     gap: 5px;
 }
@@ -149,6 +153,7 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    align-items: center;
     gap: 5px;
 }
 .grid3conta{
@@ -160,9 +165,11 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    align-items: center;
     gap: 10px;
 }
 .grid4conta{
+    align-items: center;
     grid-column-start: 2;
     grid-column-end: 2;
     grid-row-start: 2;
@@ -207,28 +214,73 @@
      height: 45px;
      width: 45px;
 }
-@media (max-width: 425px) {
+@media (min-width: 2000px) {
     .geralconta{
-       overflow-y: scroll;
-       overflow-x: hidden;
-       display: flex;
-       flex-direction: column;
+        width: 100%;
+        height: 100%;
     }
-    .midconta{
-        display: flex;
-        flex-direction: column;
+    .direitaconta{
+        height: auto;
+    }
+    .titletextcontadireita{
+        font-size: 50px;
+    }
+    .gridconta{
+        height: auto;
+        width: 100%;
+    }
+    .contaimgdireita{
+        width: 250px;
+        height: 310px;
+    }
+    .spandireita{
+        font-size: 30px;
+    }
+    .contatextdireita{
+        font-size: 30px;
     }
     .esquerdaconta{
-        display: flex;
-        width: 425px;
-    }  
+        margin-top: 0;
+    }
     .textesquerda{
-        align-items: center;
-        margin: 0px 0px -150px 0px ;
+        margin-top: 100;
     }
     .titletextcontaesquerda{
+        font-size: 70px;
+    }
+    .textcontaesquerda{
+       font-size: 50px;
+       width: 1100px;
+    }
+    .buttoncontaesquerda{
+        width: 400px;
+        height: 70px;
+    }
+    .fa-pencil-alt,
+    .fa-trash{
+        font-size: 30px;
+    }
+    
+    .buttoncontaesquerdaadm{
+        width: 400px;
+        height: 70px;
+    }
+    .inputUsername {
+        width: 500px;
+        height: 70px;
+    }
+    .textbutoncontaesquerda{
+        font-size: 35px;
+    }
+}
+
+@media (min-width: 769px ) and (max-width: 1230px) {
+    .esquerdaconta{
         margin-top: 20px;
-        font-size: 24px;
+    }
+    .titletextcontaesquerda{
+        
+        font-size: 30px;
     }
     .textcontaesquerda{
        font-size: 20px;
@@ -247,29 +299,32 @@
         height: 33px;
     }
     .inputUsername {
-        width: 300px;
+        width: 250px;
         height: 40px;
     }
     .textbutoncontaesquerda{
-        font-size: 20px;
+        font-size: 18px;
     }
     .direitaconta{
-        width: 425px;
-        
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
-   
     .titletextcontadireita{
+        margin: 20px 0 20px 0;
         font-size: 24px;
-        margin-left: 20px;
     }
     .gridconta{
         display: grid;
-        width: 425px;
+        width: 70%;
         height: 650px;
         gap: 10px;
         grid-template-columns: 1fr;
         grid-template-rows: 4fr;
         overflow: scroll;
+        position: relative;
+        z-index: 1;
 
     }
     .grid1conta{
@@ -324,8 +379,87 @@
         display: flex;
         position: relative;
         z-index: 1;
-        left: 360px;
-        top: -378px;
+        left: 40%;
+        top: -380px;
+        height: 50px;
+        width: 50px;
+    }
+     .carrinhoconta{
+        height: 50px;
+        width: 50px;
+    }
+    .imgcarrinhoconta{
+        height: 30px;
+        width: 30px;
+    }
+    
+}
+@media (max-width: 768px) {
+    .geralconta{
+       overflow-y: scroll;
+       overflow-x: hidden;
+       display: flex;
+       flex-direction: column;
+       width: 100%;
+       height: 100%;
+    }
+    .midconta{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .esquerdaconta{
+        display: flex;
+        width: 100%;
+        align-items: center;
+    }  
+    .textesquerda{
+        display: flex;
+        width: 100%;
+        align-items: center;
+        margin: 0px 0px -150px 0px ;
+    }
+    .titletextcontaesquerda{
+        margin-top: 20px;
+        font-size: 24px;
+    }
+    .textcontaesquerda{
+       font-size: 20px;
+    }
+    .buttoncontaesquerda{
+        width: 198px;
+        height: 33px;
+    }
+    .fa-pencil-alt,
+    .fa-trash{
+       font-size: 16px;
+    }
+    
+    .buttoncontaesquerdaadm{
+        width: 198px;
+        height: 33px;
+    }
+    .inputUsername {
+        width: 300px;
+        height: 40px;
+    }
+    .textbutoncontaesquerda{
+        font-size: 20px;
+    }
+    .direitaconta{
+        width: 100%;
+        height: auto;
+    }
+   
+    .titletextcontadireita{
+        font-size: 24px;
+        margin-left: 20px;
+    }
+    .carrinhoiconconta{
+        display: flex;
+        position: relative;
+        z-index: 1;
+        left: 90%;
         height: 50px;
         width: 50px;
      }
@@ -337,4 +471,121 @@
         height: 30px;
         width: 30px;
     }
+}
+@media (max-width: 522px) {
+    .gridconta{
+        display: grid;
+        width: 100%;
+        height: 650px;
+        gap: 10px;
+        grid-template-columns: 1fr;
+        grid-template-rows: 4fr;
+        overflow: scroll;
+        position: relative;
+        z-index: 1;
+
+    }
+    .grid1conta{
+        grid-column-start: 1;
+        grid-column-end: 1;
+        grid-row-start: 1;
+        grid-row-end: 1;
+        display: flex;
+        align-items: center ;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        gap: 5px;
+    }
+    .grid2conta{
+        grid-column-start: 1;
+        grid-column-end: 1;
+        grid-row-start: 2;
+        grid-row-end: 2;
+        display: flex;
+        align-items: center ;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        gap: 5px;
+    }
+    .grid3conta{
+        grid-column-start: 1;
+        grid-column-end: 1;
+        grid-row-start: 3;
+        grid-row-end: 3;
+        display: flex;
+        align-items: center ;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        gap: 5px;
+    }
+    .grid4conta{
+        grid-column-start: 1;
+        grid-column-end: 1;
+        grid-row-start: 4;
+        grid-row-end: 4;
+        display: flex;
+        align-items: center ;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        gap: 5px;
+    }
+    .carrinhoiconconta{
+        top:-10px;
+        z-index: 2;
+        left: 80%;
+        top: -380px;
+     }
+}
+@media (max-width: 375px) {
+    .esquerdaconta{
+        margin-top: 20px;
+    }
+    .titletextcontaesquerda{
+        
+        font-size: 20px;
+    }
+    .textcontaesquerda{
+       font-size: 16px;
+    }
+    .buttoncontaesquerda{
+        width: 198px;
+        height: 33px;
+    }
+    .fa-pencil-alt,
+    .fa-trash{
+       font-size: 16px;
+    }
+    
+    .buttoncontaesquerdaadm{
+        width: 198px;
+        height: 33px;
+    }
+    .inputUsername {
+        width: 198px;
+        height: 40px;
+    }
+    .textbutoncontaesquerda{
+        font-size: 16px;
+    }
+    .carrinhoiconconta{
+        width: 40px;
+        height: 40px;
+        position: relative;
+        z-index: 2;
+        left: 78%;
+        top: -380px;
+    }
+    .carrinhoconta{
+        height: 35px;
+        width: 35px;
+    }
+    .imgcarrinhoconta{
+        height: 20px;
+        width: 20px;
+    }
+    
 }
