--- a/src/components/rodape/rodape.css
+++ b/src/components/rodape/rodape.css
@@ -159,6 +159,7 @@
 }
 @media (max-width: 580px) {
     .geralrodape{
+        position: relative;
         display: flex;
         justify-content: space-between;
         flex-direction: column;
