--- a/src/components/Cabecalho/Cabecalho.css
+++ b/src/components/Cabecalho/Cabecalho.css
@@ -43,7 +43,9 @@
     justify-content: space-between;
     align-items: center;
     background-color: #FBF8F4;
-    
+    position: relative;
+    z-index: 1;
+    left: 1%;
 }
 .refcab{
     font-family: Montserrat;
