--- a/src/pages/TelaPrincipal/Telaprincipal.css
+++ b/src/pages/TelaPrincipal/Telaprincipal.css
@@ -13,73 +13,62 @@
 }
 .midhome{
     margin-top: 10vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
-.carroselcimamobile {
+.escondermobile{
     visibility: hidden;
     position: absolute;
     height: 0; 
     overflow: hidden; 
 }
-.carroselcima {
+.escondergrande{
     visibility: visible;
     position: static;
 }
-.carrossel-container {
-    width: 90vw; 
-    margin: 5vw;
+.carroselgrande {
+    display: block;
+    position: static;
+    height: auto;
+    width: 85vw;
+    margin-top: 10vh;
+    margin-bottom: 10vh;
 }
-  
 .grid-container {
-    width: 1220px;
-    height: 512px;
-    display: grid;
-    grid-template-columns: 406px 816px; 
-    grid-template-rows: 231px 231px; 
+    visibility: visible;
+    position: static;
+    display: grid !important;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr 1fr;
+    height: auto;
 }
-  
-.small-item1 {
-    grid-row-start: 2;
-    grid-row-end: 2; 
-    grid-column-start:  1;
-    grid-column-end: 1;
-    display: flex;
-    flex-direction: flex-end;
-    align-items: end;
-    justify-content: center;
+.small-item{
+    padding-right: 1px;
+    width: 100%;
+    height: 100%;
     position: relative;
-    z-index: 1;
+    overflow: hidden;
     transition: transform 0.3s ease-in-out;
 }
-.small-item2 {
-    grid-row-start: 1;
-    grid-row-end: 1; 
-    grid-column-start:  1;
-    grid-column-end: 1;
-    display: flex;
-    flex-direction: flex-end;
-    align-items: end;
-    justify-content: center;
-    position: relative;
-    z-index: 1;
-    transition: transform 0.3s ease-in-out;
+.imgcarroselgrande{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
-  
 .big-item {
-    grid-row-start: 1;
-    grid-row-end: 2; 
-    grid-column-start:  2;
-    grid-column-end: 2;
-    display: flex;
-    flex-direction: column;
-    align-items: end;
+    width: 100%;
+    height: 100%;
     position: relative;
-    z-index: 1;
+    overflow: hidden;
+    grid-column: 2;
+    grid-row: 1/3;
     transition: transform 0.3s ease-in-out;
 }
 .big-item:hover,
-.small-item1:hover,
-.small-item2:hover {
-    transform: scale(1.05);
+.small-item:hover {
+    transform: scale(1.02);
 }
 .info {
     background-color: #4B626C;
@@ -120,7 +109,7 @@
     justify-content: center;
     position: absolute;
     z-index: 2;
-    bottom: -225px;
+    bottom: 7px;
     right: 115px;
 } 
 .info2big {
@@ -134,7 +123,7 @@
     justify-content: center;
     position: absolute;
     z-index: 2;
-    bottom: -225px;
+    bottom: 7px;
     right: 7px;
     
 }
@@ -165,10 +154,10 @@
     transition: transform 0.3s ease-in-out;
 }
 .iconeAvancarSlideCarrossel {
-    right: -60px; 
+    left: 100%;
 }
 .iconeVoltarSlideCarrossel {
-    left: -60px; 
+    right: 100%;
 }
 .iconeAvancarSlideCarrossel:hover,
 .iconeVoltarSlideCarrossel:hover {
@@ -177,7 +166,7 @@
 
 .slick-dots {
     position: absolute !important;
-    bottom: 65px !important; 
+    bottom: 30px !important; 
     left: 50% !important; 
     transform: translateX(-50%) !important; 
     display: flex !important;
@@ -186,50 +175,33 @@
 }
 
 .slick-dots li button::before {
-    font-size: 20px !important; 
+    font-size: 15px !important; 
     color: #97A4A2 !important; 
     opacity: 1 !important; 
     transition: color 0.3s ease-in-out !important;
 }
 .carroselbaixo{
-    width: 100vw;
-    height: 43vh;
+    width: 100%;
+    height: auto;
     background-color: #4B626C;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    padding-bottom: 1rem;
+    justify-content: center;
 }
 .titlelancamentos{
-    margin-left: 3%;
+    position: relative;
+    left: 20px;
     font-family: Montserrat;
     font-size: 32px;
     font-weight: 300;
     text-align: left;
     color: #FBF8F3;
 }
-.slick-slider.sliderlancamentos.slick-initialized{
-    display: flex !important;
-    flex-direction: row !important;
-    margin-left: 5vw !important;
-    width: 90vw !important;
-}
+
 .carrosellancamentos {
     position: relative;
-    width: 90vw !important;
-    overflow: hidden;
-    flex-direction: row !important;
-    margin-left: 5vw !important;
-}
-
-.slick-slide {
-    display: flex !important; 
-    flex-direction: row !important;
-    justify-content: center !important;  
-    align-items: center !important; 
-}
-.slick-track {
-    display: flex !important;
+    width: 90%;
+    overflow: hidden;   
 }
 .iconeAvancarSlideCarrosselLancamento,
 .iconeVoltarSlideCarrosselLancamento {
@@ -246,29 +218,32 @@
     transition: transform 0.3s ease-in-out;
 }
 .iconeAvancarSlideCarrosselLancamento {
-    right: -60px; 
+    right: -10px; 
 }
 .iconeVoltarSlideCarrosselLancamento {
-    left: -60px; 
+    left: -10px; 
 }
 .iconeAvancarSlideCarrosselLancamento:hover,
 .iconeVoltarSlideCarrosselLancamento:hover {
     transform: translateY(-50%) scale(1.1); 
 }
 .itemlancamento{
-    display: flex ;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    z-index: 1;
+    display: flex !important;
+    flex-direction: column !important;
+    justify-content: center !important;
+    align-items: center !important;
+    height: auto !important;
+    width: auto !important;
     transition: transform 0.3s ease-in-out;
 }
 .itemlancamento:hover {
     transform: scale(1.05);
 }
 .imglancamento{
-    width: 190px;
-    height: 250px;
+    width: auto;
+    height: auto;
+    position: relative;
+    z-index: 1;
 }
 .infolancamento{
     display: flex;
@@ -279,10 +254,10 @@
     height: 25px;
     background-color: #FCFAFA;
     border-radius: 5px;
-    position: absolute;
+    position: relative;
     z-index: 2;
-    bottom: 5px;
-    left: 5px;
+    bottom: -240px;
+    right: 45px;
 }
 .precolancamento{
     font-family: Montserrat;
@@ -295,7 +270,9 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    width: 97vw;
+    position: relative;
+    bottom: 10px;
+    right: 10px;
 }
 .carrinhoprincipal{
     display: flex;
@@ -311,58 +288,81 @@
     height: 40px;
     width: 40px;
 }
-@media (max-width: 425px) {
-    .homegeral{
-        width: 425px;
-        overflow-y: auto;
-        overflow-x: hidden;
+@media (max-width: 1138px) {
+    .iconeAvancarSlideCarrossel {
+        font-size: 80px;
+        left: 98%;
     }
-    .carroselcimamobile {
+    .iconeVoltarSlideCarrossel {
+        font-size: 80px;
+        right: 98%;
+    }
+}
+@media (max-width: 768px) {
+    .carroselmobile {
         visibility: visible;
         position: static;
+        width: 80%;
         height: auto;
-        overflow: visible;
+        margin-top: 10vh;
+        margin-bottom: 10vh;
     }
-    .carrossel-container {
+
+    
+    .escondermobile {
+        visibility: visible;
+        position: static;
+        width: 100%;
+        height: auto;
+        display: flex !important;
+        flex-direction: column !important;
+        justify-content: center !important;
+        align-items: center !important;
+    }
+
+    
+    .escondergrande {
         visibility: hidden;
         position: absolute;
         height: 0;
         overflow: hidden;
     }
-    .carroselmobile{
-        display: block;
-        width: 425px;
-        height: 300px;
-    }
-    .slick-slider.carroselmobile.slick-initialized{
-        display: flex !important;
-        flex-direction: row !important;
-        justify-content: center !important;  
-        align-items: center !important;
-        height: 300px !important;
-    }
+
+
     .slidemobile{
         position: relative;
         z-index: 1;
         transition: transform 0.3s ease-in-out;
+        display: flex !important;
+        flex-direction: column !important;
+        justify-content: center !important;
+        align-items: center !important;
     }
     .slidemobile:hover{
         transform: scale(1.05);
     }
     .imgcarroselmobile{
-        width: 329px;
-        height: 187px;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    .posicaoslidemobile {
+        position: static;
+        top: 0; 
+        left: 0; 
+        z-index: 3; 
     }
     .iconeAvancarSlideCarrossel {
         font-size: 70px;
         right: -20px; 
     }
     .iconeVoltarSlideCarrossel {
+        
         font-size: 70px;
-        left: -20px; 
+        left: -70px; 
     }
     .carroselbaixo{
-        width: 425px;
+        width: 100%;
         height: 380px;
     }
     .titlelancamentos{
@@ -371,10 +371,42 @@
    
     .iconeAvancarSlideCarrosselLancamento{
         font-size: 70px;
-        left: 300px;
     }
     .iconeVoltarSlideCarrosselLancamento {
         font-size: 70px;
-        right: 300px;
     }
 }
+@media (max-width: 540px) {
+    .iconeAvancarSlideCarrossel {
+        font-size: 50px;
+        right: -20px; 
+    }
+    .iconeVoltarSlideCarrossel {
+        
+        font-size: 50px;
+        left: -70px; 
+    }
+}
+@media (max-width: 430px) {
+    .iconeAvancarSlideCarrossel {
+        font-size: 50px;
+        right: 10px; 
+    }
+    .iconeVoltarSlideCarrossel {
+        
+        font-size: 50px;
+        left: -50px; 
+    }
+}
+@media (max-width: 404px) {
+    .iconeAvancarSlideCarrossel {
+        font-size: 50px;
+        right: -20px; 
+    }
+    .iconeVoltarSlideCarrossel {
+        
+        font-size: 50px;
+        left: -60px; 
+    }
+}
+
